# embedairr

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  huggingface_model_inference_analysis.md  prepare_release.py  pyproject.toml  requirements.txt  setup.py  test_import.py
.codex/: plan.md  subplan_1.md  subplan_2.md  subplan_3.md  subplan_4.md  subplan_5.md
.cursor/: final_summary.md  phase_summary.md  subplan_4.md  subplan_5.md  subplan_6.md  subplan_7.md
.github/: ENHANCED_WORKFLOW.md  GITHUB_ENVIRONMENT_SETUP.md  PUBLISHING_SETUP.md  QUICK_SETUP.md
.github/workflows/: publish-main-branch-trusted.yml  publish-test-branch-trusted.yml  publish-test-branch.yml  publish-trusted.yml  publish.yml
embedairr/: __init__.py  __main__.py  antiberta2_embedder.py  base_embedder.py  embedairr.py  embedairr_debug.py  esm2_embedder.py  esm_embedder.py  huggingface_embedder.py  main.py  model_selecter.py  parse_arguments.py  prott5_embedder.py  test_import.py  utils.py
embedairr/embedders/: base_embedder.py  custom_embedder.py  esm_embedder.py  huggingface_embedder.py
examples/: embedding_options.md
examples/custom_model/: create_example_custom_model.py  example_cdr3.csv
src/pepe/: __init__.py  datasets.py  embedder_utils.py  io_utils.py  model_selecter.py  parse_arguments.py  utils.py
src/pepe/embedders/: base_embedder.py  custom_embedder.py  esm_embedder.py  huggingface_embedder.py
src/pepe/embedders/components/: __init__.py  data_processor.py  embedder_config.py  embedding_processor.py  output_manager.py  streaming_io.py
src/tests/: test_base_embedder.py  test_embedder_config.py  test_embedding_extraction.py  test_embedding_processor.py  test_end_to_end.py  test_huggingface_models.py  test_output_manager.py  test_run.py  test_run.sh  test_simple_base_embedder.py  test_streaming_io.py  test_utils.py
src/tests/test_files/: test_cdr3.csv  test_substring.csv
src/tests/test_files/test_output/antiberta2-cssp/: test_idx.csv
src/tests/test_files/test_output/antiberta2-cssp/attention_matrices_all_heads/: test_antiberta2-cssp_attention_matrices_all_heads_layer_16_head_1.npy  test_antiberta2-cssp_attention_matrices_all_heads_layer_16_head_10.npy  test_antiberta2-cssp_attention_matrices_all_heads_layer_16_head_11.npy  test_antiberta2-cssp_attention_matrices_all_heads_layer_16_head_12.npy  test_antiberta2-cssp_attention_matrices_all_heads_layer_16_head_13.npy  test_antiberta2-cssp_attention_matrices_all_heads_layer_16_head_14.npy  test_antiberta2-cssp_attention_matrices_all_heads_layer_16_head_15.npy  test_antiberta2-cssp_attention_matrices_all_heads_layer_16_head_16.npy  test_antiberta2-cssp_attention_matrices_all_heads_layer_16_head_2.npy  test_antiberta2-cssp_attention_matrices_all_heads_layer_16_head_3.npy  test_antiberta2-cssp_attention_matrices_all_heads_layer_16_head_4.npy  test_antiberta2-cssp_attention_matrices_all_heads_layer_16_head_5.npy  test_antiberta2-cssp_attention_matrices_all_heads_layer_16_head_6.npy  test_antiberta2-cssp_attention_matrices_all_heads_layer_16_head_7.npy  test_antiberta2-cssp_attention_matrices_all_heads_layer_16_head_8.npy  (+1 more)
tests/: test_embedairr.py  test_run.py  test_run.sh
tests/test_files/: test.fasta
(+40 files in other folders)
