[project]
authors = [{name = "jahnz", email = "jahn.zhong@medisin.uio.no"}]
dependencies = []
name = "embedex"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project.scripts]
embedex = "embedair.__main__:main"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
embedair = { path = ".", editable = true }
torch = { version = ">=2.5.1", index = "https://download.pytorch.org/whl/cu126" }

[tool.pixi.tasks]

[tool.pixi.system-requirements]
cuda = "12.6"

[tool.pixi.dependencies]
numpy = ">=2.2.4,<3"
fair-esm = ">=2.0.0,<3"
transformers = ">=4.49.0,<5"
matplotlib = ">=3.10.1,<4"
